--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "expo": "~46.0.17",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6",
-    "expo-splash-screen": "~0.16.2",
     "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-crisp-chat-sdk": "^0.12.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
